typo in first sentence

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -57,7 +57,7 @@
 
 \section{Introduction}
 
-In the context of modern cryptosytmes, a common theme is the creation of
+In the context of modern cryptosystems, a common theme is the creation of
 distributed turst networks. In most of these designs, permenant storeage of a
 contract is required. However, permenant storage can become a major performance
 and cost bottleneck. As a result, good code compression schemes are a key
