--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -58,7 +58,7 @@
 \section{Introduction}
 
 In the context of modern cryptosystems, a common theme is the creation of
-distributed turst networks. In most of these designs, permenant storeage of a
+distributed trust networks. In most of these designs, permenant storage of a
 contract is required. However, permenant storage can become a major performance
 and cost bottleneck. As a result, good code compression schemes are a key
 factor in scaling these contract based cryptosystems. For this project, we
@@ -79,7 +79,7 @@ branches of execution.
 
 MASTs combine the traits of Merkle Trees~\cite{merkle} and Abstract Syntax
 Trees (ASTs) to compactly and securely represent programs. Merkle trees are
-data structures that can be used to efficiently verify the integrity of ther
+data structures that can be used to efficiently verify the integrity of the
 data they store.  Data blocks are stored in the leaf nodes, and every non-leaf
 node is the hash of the labels of its children nodes (see Figure 1). In the
 Bitcoin Blockchain, Merkle trees are currently used to efficiently store
@@ -89,12 +89,14 @@ nodes represent programmatic operations and control flow mechanisms.
  
 In a MAST, the root of the tree represents the entirety of the program, while
 all other nodes represent subprograms. Each path in the tree is a different
-execution branch that the program can take. The structure is “Merkelized” in
+execution branch that the program can take. The structure is ``Merkelized'' in
 that leaf nodes are hashes of the subprogram code that they represent, and
 non-leaf nodes are hashes of the children labels. MASTs can therefore compactly
 represent the execution flow of a program with just a sequence of hashes that
 specify which child edge to follow at each node. Overall, this means that for
 a program of length $n$, a compression to $O(\log{}n)$ could be expected.
+
+\vfill
 
 \begin{figure}[h]
 	\includegraphics[scale=.4]{merkle_tree}
@@ -113,13 +115,13 @@ execution, and new branches can be added via the \texttt{addBr} method. Joining 
 string content from each node along a path in a MAST therefore yields the code
 for one possible path of execution for a program.
  
-Since branches in a MAST don’t have to be added in any particular order,
+Since branches in a MAST don't have to be added in any particular order,
 maintaining consistency during tree construction would be cumbersome. Instead,
-that hash function of a MAST node computes the correct Merkle hash using the
+the hash function of a MAST node computes the correct Merkle hash using the
 current state of the tree. It does so by first forming a binary tree of all
 direct children nodes. As this tree is constructed, hashes are concatenated and
 hashed to compute a new Merkle hash at each level of the binary tree. Then, the
-root hash of the children tree is summed with the hash of the node’s own
+root hash of the children tree is summed with the hash of the node's own
 content, producing a Merkle hash representing the node's code and children. By
 not including the node's content in the binary tree we establish a syntax-tree
 style construction where the parent executes before the child. Figure 2a shows
@@ -127,6 +129,8 @@ the structure used to calculate the Merkle hash of a given MAST node. The four
 children branches are placed in a binary tree whose root is the yellow ``Branch
 Merkle Root.'' This Branch Merkle Root hash is summed with the content hash on
 the left to give the Merkle Root.
+
+\vfill
 
 \subsection{Proof Lists}
 
@@ -167,15 +171,15 @@ extensibility of this project to be integrated within the Bitcoin Blockchain.
 We implemented a crypto currency network simulator to use MASTs to verify and
 execute code transferred over the network. To simulate the transaction
 verification process used in Bitcoin, we created \texttt{ConsensusNode} objects to
-execute and validate the code in a transaction. We implemented types
+execute and validate the code in a transaction. We implemented three types
 of \texttt{ConsensusNode}: \texttt{GoodNode}, \texttt{EvilNode}, and
 \texttt{InconsistentNode}. \texttt{GoodNode}s execute code properly and
 include transactions in their local ledgers if they are valid.
 \texttt{EvilNode}s can add invalid transactions to their
 ledgers and exclude valid ones. \texttt{InconsistentNode}s behave correctly with some
 probability. With the three node types, we can simulate more realistic network
-conditions and the presence of adversaries.\texttt{ConsensusNode} can be further
-subtyped to simulate other types of adversary.
+conditions and the presence of adversaries. \texttt{ConsensusNode} can be further
+subtyped to simulate other types of adversaries.
 
 
 Code for a transaction is stored in a MAST, and the transaction saves the
@@ -225,22 +229,22 @@ python scripts, which can be found in our repo at the location MAST/bin. The
 file longcode.py (Figure 3) generates a Merkle tree with tens of thousands of
 branches, yielding a total code length of 2M characters, The post-compression
 result after applying our algorithms was under 23,500 characters, indicating a
-compression rate of over 90%. We cannot compare the code compression we saw
+compression rate of over 90\%. We cannot compare the code compression we saw
 directly to compressing with another algorithm such as LZW because such
 algorithms employ frequency based compression and longcode uses repeated
-segments again and again This is OK to do because we perform structural
+segments again and again. This is OK to do because we perform structural
 compression. Instead, we compared it to using zip to compress code from the Linux kernel.
 This took it from roughly 6115332 characters in length to 1754665 characters, a
-compression rate of 70%. It is important to note that compression algorithms
-could also be used in several places in MASTS as well: per code block, and on
+compression rate of 70\%. It is important to note that compression algorithms
+could also be used in several places in MASTs as well: per code block, and on
 the complete proof list. Additionally, we use an unoptimized message format to send
-MASTS which is essentially a list of $[([subproof],data, mroot) ]$. This could be
-further optimized to not use punctuation and whitespace and use more
+MASTs which is essentially a list of $[([subproof],data, mroot) ]$. This could be
+further optimized to not use punctuation and whitespace, and to use more
 efficient character encodings. Surprisingly, encoding the proof in a bitcoin
 script (ie, self proving) was more efficient than having an external validation
 script.
 
-\begin{figure}[t!]
+\begin{figure}[h]
 	\lstinputlisting[language=Python, breaklines=true]{code1.py}
 	\caption{Pseudocode demonstrating code compression on a Merkle tree with millions of characters. Conversion to a MAST representation yielded a compression score of over 90\%}
            \label{code}
@@ -248,9 +252,9 @@ script.
 
 \section{Significance and Future Work}
 
-The primary impact of this projects is in its applications to established
+The primary impact of this project is in its applications to established
 environments utilizing contracts. The introduction of MASTs has potential to
-greatly impact existing problems ranging from bitcoin contracts to code
+greatly impact existing problems ranging from Bitcoin contracts to code
 transfer between distributed nodes on a network. Potential improvements to this
 implementation of the MAST could include greater support for distributed
 construction and execution or the addition of a framework allowing greater
@@ -258,8 +262,6 @@ extensibility by users of this data structure. Complete integration with
 Bitcoin would reduce the amount of data that is stored in the Blockchain, and
 will make it possible to perform more complex transactions like the will we
 modeled.
-
-\vfill
 
 \bibliographystyle{abbrv}
 \bibliography{paper}
