update paper refs

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,4 +1,10 @@
-
+@misc{
+    bitcointalk,
+    Author = {Peter Todd},
+    Title = {Re: Which clients fully support P2SH and/or multisig?},
+    howpublished = {\url{https://bitcointalk.org/index.php?topic=255145.msg2757327#msg2757327}},
+    note = {Accessed: 2014-12-16}
+    }
 @inproceedings{merkle,
   title={Protocols for public key cryptosystems},
   author={Merkle, R.C},
